--- a/README
+++ b/README
@@ -6,3 +6,6 @@ Author: John Tsiombikas <nuclear@member.fsf.org>
 This library is released as free software under the term of the GNU Lesser
 General Public License (LGPL) version 3 or any later version published by
 the Free Software Foundation. See COPYING and COPYING.LESSER for details.
+
+web site: http://nuclear.mutantstargoat.com/sw/libimago
+code repository: http://github.com/jtsiomb/libimago
